tests/fixtures/valid/multi/pub_include_with_public_type_binding/src/container/lib.gcl
// container.gcl -- same library as the V006 negative fixture.
pub(bind) type Element {
    Element(size: Length),
}

pub const node origin: Element = Element(size: 1.0 m);
